--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@
 !var/SymfonyRequirements.php
 /vendor/
 /web/bundles/
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries
+.idea/vcs.xml
+.idea/jsLibraryMappings.xml
